[fix] 背景overflow

--- a/app/src/components/common/Background/index.module.less
+++ b/app/src/components/common/Background/index.module.less
@@ -40,6 +40,7 @@
   bottom: 0;
   left: 0;
   background-color: white;
+  overflow: hidden;
 
   .color {
     position: absolute;
